[tool.poetry]
name = "starlite-newrelic"
version = "0.1.0"
description = ""
authors = ["indra <indra.abdullah99@gmail.com>"]
readme = "README.md"
packages = [{include = "starlite_newrelic"}]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.39.0"
newrelic = "^8.4.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
